# argument

./: Cargo.toml  Makefile  README.md
.github/workflows/: tests.yml
argument/: Cargo.toml
argument-parser/: Cargo.toml  README.md
argument-parser/examples/: basic.rs  cargo.rs  chmod.rs  minijinja.rs  multiple-values.rs  no-numeric.rs  posix-args.rs
argument-parser/src/: lib.rs
argument-parser/tests/: test_api.rs  test_errors.rs  test_parsing.rs
crates/argument/: Cargo.toml
crates/argument-parser/: Cargo.toml  README.md
crates/argument-parser/examples/: cargo.rs  no-numeric.rs  non-standard.rs
crates/argument-parser/tests/: test_parsing.rs
scripts/: bump-version.sh  publish-all.sh
