[package]
name = "argument-parser"
description = "a not yet published argument parsing library. Mail me if you have questions."
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
